# database2prompt

./: .env.example  .gitignore  Dockerfile  README.md  database-summary.md  docker-compose.yml  output.md  pyproject.toml  requirements.txt  server.py  summary-database.json  summary-database.md
.github/: PULL_REQUEST_TEMPLATE.md.md
.github/workflows/: code-buddy-review.yaml  pull-request.yaml  pypi-publish.yaml
database2prompt/: database-summary.md  main.py  pyproject.toml  summary-database.md
database2prompt/database/: connection.py
database2prompt/database/core/: database_factory.py  database_params.py  database_strategy.py
database2prompt/database/pgsql/: postgresql_strategy.py  table_metadata_pg.py
database2prompt/database/processing/: database_processor.py
database2prompt/json_generator/: json_generator.py
database2prompt/markdown/: generator.py  markdown_generator.py
mcp_server/: client.py  requirements.txt  server.py
tests/database/processing/: test_database_processor.py
tests/markdown/: test_generator.py  test_markdown_generator.py
